<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hack Day Project</string>
    <string name="title_activity_home">MyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="title_activity_continue_game">ContinueGameActivity</string>
    <string name="new_game_title">NEW GAME!!</string>
    <string name="continue_game_title">CONTINUE GAME!!</string>
    <string name="continue_game">Continue Game</string>
    <string name="eat_shit">Eat Shit</string>
    <string name="new_game">New Game</string>
    <string name="title_activity_company_list">CompanyListActivity</string>
    <string name="app_name_title">APP TITLE GOES HERE</string>
    <string name="new_releases">New Releases</string>
    <string name="my_comics">My Comics</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_my_comics">MyComicsActivity</string>
    <string name="email_hint">type your email address</string>
    <string name="password_hint">type your password</string>
    <string name="user_preferences">User_Preferences</string>
    <string name="user_email">user_email</string>
    <string name="user_password">user_password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="re_password_hint">confirm your password</string>
    <string name="register">Register</string>
    <string name="confirm_password_hint">confirm your password</string>
    <string name="sign_out">Sign Out</string>
    <string name="current_releases">Current Releases</string>
    <string name="last_week">Last Week</string>
    <string name="next_week">Next Week</string>
    <string name="current_week">Current Week</string>
    <string name="my_comics_empty">You have no saved comics.</string>

</resources>
