<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.drew.hackdayproject.HomeActivity">



    <TextView
        android:id="@+id/app_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_title"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:background="@color/blue"
        android:padding="100dp"/>

    <EditText
        android:id="@+id/email_field"
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/app_name_title"/>

    <EditText
        android:id="@+id/password_field"
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@+id/email_field"/>

    <EditText
        android:id="@+id/confirm_password_field"
        android:background="@color/white"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:layout_below="@+id/password_field"/>


    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/register_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/confirm_password_field"/>



</RelativeLayout>
