<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.drew.hackdayproject.MenuActivity">

    <TextView
        android:id="@+id/new_game_button"
        android:text="@string/new_game"
        android:textSize="38dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>
    <TextView
        android:id="@+id/continue_game_button"
        android:text="@string/continue_game"
        android:textSize="38dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/new_game_button"/>

    <TextView
        android:id="@+id/eat_shit_button"
        android:text="@string/eat_shit"
        android:textSize="38dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/continue_game_button"/>
</RelativeLayout>
